# tesuji

./: Cargo.toml  README.md  sgf.pest
benches/: board_rendering.rs
gui/: Cargo.toml
gui/benches/: board_rendering.rs
gui/src/: main.rs
gui/src/gui/: assets.rs  board.rs  hotkeys.rs  io.rs  mod.rs  tree_panel.rs
src/: lib.rs  main.rs
src/cli/: mod.rs
src/editor/: cursor.rs  mod.rs
src/gui/: assets.rs  board.rs  hotkeys.rs  io.rs  mod.rs  theme.rs  tree_panel.rs
src/sgf/: board.rs  mod.rs  node.rs  parser.rs  serializer.rs  tree.rs
