[package]
name = "tesuji"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4", features = ["wrap_help"] }
clap_complete = "4"
iced = { version = "0.14.0", features = ["advanced", "canvas", "tokio", "image"] }
pest = "2.8.6"
pest_consume = "1.1.3"
pest_derive = "2.8.6"
rfd = "0.17.2"
tokio = { version = "1", features = ["rt-multi-thread", "fs"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "board_rendering"
harness = false
