[package]
name = "tesuji"
version = "0.1.0"
edition = "2024"
description = "SGF parser, serializer, and editor for Go game records"
readme = "README.md"
repository = "https://github.com/kindergartener/tesuji"
license = "MIT OR Apache-2.0"
keywords = ["baduk", "game-tree", "go", "sgf", "weiqi"]
categories = ["game-development", "parser-implementations"]

[workspace]
members = [".", "gui"]

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4", features = ["wrap_help"], optional = true }
clap_complete = { version = "4", optional = true }
pest = "2.8.6"
pest_consume = "1.1.3"
pest_derive = "2.8.6"

[features]
cli = ["dep:clap", "dep:clap_complete"]
