[package]
name = "tesuji-gui"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "tesuji-gui"
path = "src/main.rs"

[dependencies]
tesuji = { path = ".." }
iced = { version = "0.14.0", features = ["advanced", "canvas", "tokio", "image"] }
rfd = "0.17.2"
tokio = { version = "1", features = ["rt-multi-thread", "fs"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "board_rendering"
harness = false
